# sport-activities-features-api

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  readme.md
helpers/: file_reader.py  file_transformer.py  folder.py  overpy_transformer.py  temp_file.py
models/: models.py
routers/: area.py  banister_TRIMP.py  csv.py  dead_end.py  dead_end_identification.py  hill_identification.py  interruptions.py  interval_identification.py  missing_elevation.py  overpy_node_manipulation.py  reader.py  topographic_features.py  weather.py
