[tool.poetry]
name = "sport-activities-features api"
version = "0.2.1"
description = ""
authors = ["alenrajsp <alen.rajsp@um.si>"]

[tool.poetry.dependencies]
python = "^3.9"
sport-activities-features = "^0.2.14"
fastapi = {extras = ["all"], version = "^0.75.1"}
python-multipart = "^0.0.5"
jsonpickle = "^2.1.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
