[tool.poetry]
name = "sport-activities-features-api"
version = "0.2.2"
description = "Sport-activities-features API is a Python library for using sport-activities-features as an FastAPI based web API."
authors = ["alenrajsp <alen.rajsp@um.si>"]
license="MIT"
repository="https://github.com/alenrajsp/sport-activities-features-api/"

[tool.poetry.dependencies]
python = "^3.9"
sport-activities-features = "^0.3.9"
fastapi = {extras = ["all"], version = "^0.89.1"}
python-multipart = "^0.0.5"
jsonpickle = "^3.0.1"
pydantic = "^1.10.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
